--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "@types/axios": "^0.14.4",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
